--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 CMakeCache.txt
+CMakeLists.txt
 CMakeFiles
 CMakeScripts
 Makefile
 cmake_install.cmake
 install_manifest.txt
+
+myjunk
+*.so
+*.pcd
