--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 project( dronesim )
 
-add_subdirectory(src)
+add_subdirectory(src/gazebo_interface)
+add_subdirectory(src/reader)
